add phong shading test(test2)

--- a/test.html
+++ b/test.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <title>webgl-test</title>
 <script type="text/javascript" src="gl-matrix.js"></script>
+<script type="text/javascript" src="gl-util.js"></script>
 
 <script id="shader-fs" type="x-shader/x-fragment">
 	precision mediump float;
@@ -141,102 +142,6 @@ window.onload = function() {
 	
 	task.init();
 	window.setInterval(function() { task.procFrame() }, 1000 / 30);
-}
-
-function checkError(gl)
-{
-	var error = gl.getError();
-	if (error != gl.NO_ERROR && ! gl.isInError) {
-		console.log("error: gl error[0x" + error.toString(16) + "]");
-		gl.isInError = true;
-	}
-}
-
-function bindVertexBuffer(gl, loc, buffer)
-{
-	gl.enableVertexAttribArray(loc);
-	gl.bindBuffer(buffer.target, buffer);
-	gl.vertexAttribPointer(loc, buffer.itemSize, buffer.itemType, false, 0, 0);
-}
-
-function createBuffer(gl, target, data_src, item_type, item_size) {
-	if (data_src.length % item_size != 0) {
-		console.log("error: data_src.length[" + data_src.length + "] should be multiply of item_size[" + item_size + "]");
-	}
-	var buffer = gl.createBuffer();
-	gl.bindBuffer(target, buffer);
-	switch (item_type) {
-	case gl.UNSIGNED_SHORT:
-		var data_arr = new Uint16Array(data_src)
-		break;
-	case gl.FLOAT:
-		var data_arr = new Float32Array(data_src)
-		break;
-	}
-	gl.bufferData(target, data_arr, gl.STATIC_DRAW);
-	buffer.target = target;
-	buffer.itemType = item_type;
-	buffer.itemSize = item_size;
-	buffer.itemNum = data_src.length / item_size;
-	return buffer;
-}
-
-function createShaderProgram(gl, vs_script_id, fs_script_id) {
-	var vertex_shader = loadShader(gl, "shader-vs");
-	var fragment_shader = loadShader(gl, "shader-fs");
-	
-	var shader_program = gl.createProgram();
-	gl.attachShader(shader_program, vertex_shader);
-	gl.attachShader(shader_program, fragment_shader);
-	gl.linkProgram(shader_program);
-	
-	var is_linked = gl.getProgramParameter(shader_program, gl.LINK_STATUS);
-	if ( ! is_linked) {
-		var error = gl.getProgramInfoLog(shader_program);
-		console.log("error: link shader script id[" + vs_script_id + "] and [" + fs_script_id + "] failed ->\n" + error);
-		gl.deleteProgram(shader_program);
-		gl.deleteShader(vertex_shader);
-		gl.deleteShader(fragment_shader);
-		return null;
-	}
-	
-	return shader_program;
-}
-
-function loadShader(gl, script_id) {
-	var shader_script = document.getElementById(script_id);
-	if ( ! shader_script) {
-		console.log("error: cannot find script id[" + script_id + "].");
-		return null;
-	}
-	
-	if (shader_script.type == "x-shader/x-vertex") {
-		var shader_type = gl.VERTEX_SHADER;
-	} else if (shader_script.type == "x-shader/x-fragment") {
-		var shader_type = gl.FRAGMENT_SHADER;
-	} else {
-		console.log("error: illegal shader type[" + shader_script.type + "] of script id[" + script_id + "].");
-		return null;
-	}
-	
-	var shader = gl.createShader(shader_type);
-	if ( ! shader) {
-		console.log("error: unnable to create shader from script id[" + script_id + "].");
-		return null;
-	}
-	
-	gl.shaderSource(shader, shader_script.text);
-	gl.compileShader(shader);
-	
-	var is_compiled = gl.getShaderParameter(shader, gl.COMPILE_STATUS);
-	if ( ! is_compiled) {
-		var error = gl.getShaderInfoLog(shader);
-		console.log("error: compile shader script id[" + script_id + "] failed ->\n" + error);
-		gl.deleteShader(shader);
-		return null;
-	}
-	
-	return shader;
 }
 
 </script>
